# griffin

./: .gitignore  Cargo.toml  README.md
examples/: genesis.json
griffin-core/: Cargo.toml  README.md
griffin-core/src/: checks_interface.rs  executive.rs  h224.rs  lib.rs  pallas_addresses.rs  pallas_applying.rs  pallas_codec.rs  pallas_crypto.rs  pallas_interface.rs  pallas_primitives.rs  pallas_traverse.rs  support_macros.rs  types.rs  uplc.rs  utxo_set.rs
griffin-core/src/genesis/: block_builder.rs  config_builder.rs  mod.rs
griffin-core/src/pallas_addresses/: byron.rs  varuint.rs
griffin-core/src/pallas_applying/: alonzo.rs  babbage.rs  byron.rs  conway.rs  shelley_ma.rs  utils.rs
griffin-core/src/pallas_applying/tests/: alonzo.rs  babbage.rs  byron.rs  common.rs  shelley_ma.rs
griffin-core/src/pallas_applying/utils/: environment.rs  validation.rs
griffin-core/src/pallas_codec/: utils.rs
griffin-core/src/pallas_codec/flat/: zigzag.rs
griffin-core/src/pallas_codec/flat/decode/: decoder.rs  error.rs  mod.rs
griffin-core/src/pallas_codec/flat/encode/: encoder.rs  error.rs  mod.rs
griffin-core/src/pallas_codec/tests/: flat.rs  zigzag.rs
griffin-core/src/pallas_crypto/: memsec.rs
griffin-core/src/pallas_crypto/hash/: hash.rs  hasher.rs  mod.rs  serde.rs
griffin-core/src/pallas_crypto/key/: ed25519.rs
griffin-core/src/pallas_crypto/nonce/: mod.rs
griffin-core/src/pallas_primitives/: framework.rs  plutus_data.rs
griffin-core/src/pallas_primitives/alonzo/: json.rs  model.rs
griffin-core/src/pallas_primitives/babbage/: model.rs
griffin-core/src/pallas_primitives/byron/: model.rs
griffin-core/src/pallas_primitives/conway/: model.rs
griffin-core/src/pallas_traverse/: assets.rs  auxiliary.rs  block.rs  cert.rs  era.rs  fees.rs  hashes.rs  header.rs  input.rs  meta.rs  output.rs  probe.rs  redeemers.rs  signers.rs  size.rs  support.rs  time.rs  tx.rs  update.rs  value.rs  wellknown.rs  withdrawals.rs  witnesses.rs
griffin-core/src/uplc/: ast.rs  builder.rs  builtins.rs  debruijn.rs  flat.rs  hamming.rs  machine.rs  optimize.rs  tx.rs
griffin-core/src/uplc/debruijn/: bimap.rs
griffin-core/src/uplc/hamming/: distance_.rs  util.rs  weight_.rs
griffin-core/src/uplc/machine/: cost_model.rs  error.rs  eval_result.rs  runtime.rs  value.rs
griffin-core/src/uplc/optimize/: interner.rs  shrinker.rs
griffin-core/src/uplc/parser/: interner.rs
griffin-core/src/uplc/tx/: error.rs  eval.rs  phase_one.rs  script_context.rs  tests.rs  to_plutus_data.rs
griffin-core/src/uplc/tx/snapshots/: griffin_core__uplc__tx__script_context__tests__script_context_certificates.snap  griffin_core__uplc__tx__script_context__tests__script_context_mint.snap  griffin_core__uplc__tx__script_context__tests__script_context_propose_all_but_pparams.snap  griffin_core__uplc__tx__script_context__tests__script_context_propose_pparams_no_cost_models.snap  griffin_core__uplc__tx__script_context__tests__script_context_simple_send.snap  griffin_core__uplc__tx__script_context__tests__script_context_voting.snap  griffin_core__uplc__tx__script_context__tests__script_context_withdraw.snap
griffin-pallas/: Cargo.toml  README.md
griffin-pallas/pallas-addresses/: Cargo.toml
griffin-pallas/pallas-addresses/src/: byron.rs  lib.rs
griffin-pallas/pallas-applying/: Cargo.toml
griffin-pallas/pallas-applying/src/: alonzo.rs  babbage.rs  byron.rs  lib.rs  shelley_ma.rs  utils.rs
griffin-pallas/pallas-codec/: Cargo.toml
griffin-pallas/pallas-codec/src/: lib.rs  utils.rs
griffin-pallas/pallas-codec/src/flat/: filler.rs  mod.rs
griffin-pallas/pallas-codec/src/flat/decode/: decoder.rs  mod.rs
griffin-pallas/pallas-codec/src/flat/encode/: encoder.rs  mod.rs
griffin-pallas/pallas-crypto/: Cargo.toml
griffin-pallas/pallas-crypto/src/: lib.rs  memsec.rs
griffin-pallas/pallas-crypto/src/hash/: hash.rs  hasher.rs  serde.rs
griffin-pallas/pallas-crypto/src/key/: ed25519.rs
griffin-pallas/pallas-primitives/: Cargo.toml
griffin-pallas/pallas-primitives/src/: framework.rs  lib.rs
griffin-pallas/pallas-primitives/src/alonzo/: json.rs  model.rs
griffin-pallas/pallas-primitives/src/babbage/: model.rs
griffin-pallas/pallas-primitives/src/byron/: model.rs
griffin-pallas/pallas-primitives/src/conway/: model.rs
griffin-pallas/pallas-traverse/: Cargo.toml
griffin-pallas/pallas-traverse/src/: assets.rs  auxiliary.rs  block.rs  era.rs  header.rs  input.rs  lib.rs  meta.rs  output.rs  redeemers.rs  signers.rs  support.rs  tx.rs  update.rs  withdrawals.rs  witnesses.rs
griffin-pallas/src/: lib.rs
griffin-pallas/src/pallas_addresses/: Cargo.toml
griffin-pallas/src/pallas_applying/: Cargo.toml
griffin-pallas/src/pallas_applying/tests/: byron.rs  shelley_ma.rs
griffin-pallas/src/pallas_codec/: Cargo.toml
griffin-pallas/src/pallas_crypto/: Cargo.toml
griffin-pallas/src/pallas_primitives/alonzo/: json.rs
griffin-pallas/src/pallas_traverse/: Cargo.toml  auxiliary.rs  probe.rs  size.rs
runtime/: Cargo.toml  README.md
runtime/src/: genesis.rs  lib.rs
uplc/: Cargo.toml
uplc/src/: ast.rs  builder.rs  builtins.rs  debruijn.rs  flat.rs  lib.rs  machine.rs  parser.rs  pretty.rs  tx.rs
uplc/src/debruijn/: bimap.rs
uplc/src/machine/: cost_model.rs  error.rs  eval_result.rs  runtime.rs  value.rs
uplc/src/optimize/: interner.rs  shrinker.rs
uplc/src/parser/: interner.rs
uplc/src/tx/: error.rs  eval.rs  phase_one.rs  script_context.rs  to_plutus_data.rs
wallet/: Cargo.toml  README.md
wallet/src/: cli.rs  command.rs  eutxo.rs  keystore.rs  main.rs  money.rs  order_book.rs  rpc.rs  sync.rs
wallet/src/eutxo_examples/hello_world/: datum.txt  redeemer.txt  script.txt  scripts_info.json
wallet/src/eutxo_examples/one_shot_mp/: inputs_info.json  mintings_info.json  outputs_info.json  parameters.txt  script.txt  scripts_info.json
wallet/src/eutxo_examples/order_book/: cancel_redeemer.txt  datum.txt  policy_redeemer.txt  resolve_redeemer.txt  script.txt  scripts_info.json
wallet/src/eutxo_examples/vesting/: datum.txt  scripts_info.json  validator.txt
(+44 files in other folders)
