[package]
name = "griffin-core"
description = "UTXO framework for Substrate and Polkadot."
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
async-trait = { version = "0.1.73", optional = true }
log = { workspace = true }
parity-scale-codec = { features = ["derive"], workspace = true }
parity-util-mem = { version = "0.12.0", optional = true }
scale-info = { features = ["derive"], workspace = true }
serde = { features = ["derive"], workspace = true }

# Substrate
sp-core = { default-features = false, workspace = true }
sp-debug-derive = { features = [
	"force-debug",
], default-features = false, workspace = true }
sp-inherents = { default-features = false, workspace = true }
sp-io = { features = [
	"with-tracing",
], default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-storage = { default-features = false, workspace = true }

### Genesis Builder dependencies
sc-chain-spec = { optional = true, workspace = true }
sc-client-api = { optional = true, workspace = true }
sc-executor = { optional = true, workspace = true }
sp-blockchain = { optional = true, workspace = true }
sp-genesis-builder = { default-features = false, workspace = true }

pallas-primitives.workspace = true
pallas-codec.workspace = true
pallas-crypto.workspace = true
pallas-applying.workspace = true
pallas-traverse.workspace = true
hex.workspace = true
hashbrown = { version = "0.14" }

### H224 dependencies
fixed-hash = { version = "0.8", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }
impl-codec = { version = "0.7.0", default-features = false }
impl-rlp = { version = "0.4", default-features = false }
schemars = { version = ">=0.8.12", default-features = true, optional = true }

[features]
default = ["std", "rand"]
std = [
	"async-trait",
	"sp-debug-derive/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"serde/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"parity-util-mem",
	"sp-storage/std",
	"sc-client-api",
	"sc-chain-spec",
	"sc-executor",
	"sp-blockchain",
	### H224 features
	"fixed-hash/std",
	"impl-codec/std",
	### H224 `serde` feature
	"impl-serde/std",
]

### H224 features, cont'd
rand = ["fixed-hash/rand"]
json-schema = ["dep:schemars"]
fp-conversion = ["std"]
