[package]
name = "griffin-core"
description = "UTXO framework for Substrate and Polkadot."
version = "0.1.0"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
async-trait = { version = "0.1.73", optional = true }
log = { workspace = true }
parity-scale-codec = { features = ["derive"], workspace = true }
parity-util-mem = { version = "0.12.0", optional = true }
scale-info = { features = ["derive"], workspace = true }

# Substrate
sp-core = { default-features = false, workspace = true }
sp-debug-derive = { features = [
	"force-debug",
], default-features = false, workspace = true }
sp-inherents = { default-features = false, workspace = true }
sp-io = { features = [
	"with-tracing",
], default-features = false, workspace = true }
sp-runtime = { default-features = false, workspace = true }
sp-storage = { default-features = false, workspace = true }

### Genesis Builder dependencies
sc-chain-spec = { optional = true, workspace = true }
sc-client-api = { optional = true, workspace = true }
sc-executor = { optional = true, workspace = true }
sp-blockchain = { optional = true, workspace = true }
sp-genesis-builder = { default-features = false, workspace = true }

hashbrown = { version = "0.14" }

### H224 dependencies
fixed-hash = { version = "0.8", default-features = false }
impl-serde = { version = "0.5.0", default-features = false }
impl-codec = { version = "0.7.0", default-features = false }
impl-rlp = { version = "0.4", default-features = false }
schemars = { version = ">=0.8.12", default-features = true, optional = true }

### Pallas
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
minicbor = { version = "0.25.1", features = ["alloc", "half", "derive"] }
num-bigint = { version = "0.4.4", optional = true, default-features = false }
serde = { version = "1.0.143", default-features = false, features = [
  "derive",
  "alloc",
] }
thiserror-no-std = "2.0.2"
cryptoxide = { version = "0.4.4" }
rand_core = "0.6"
base58 = "0.2.0"
bech32 = { version = "0.9.1", default-features = false }
crc = "3.0.1"
core2 = { version = "0.4.0", default-features = false }
paste = "1.0.14"
itertools = { version="0.13.0", default-features = false, features = ["use_alloc"] }
serde_json = { version = "1.0.79", optional = true, default-features = false, features = [
    "alloc",
] }

[features]
default = ["std", "rand", "json"]
std = [
	"async-trait",
	"sp-debug-derive/std",
	"parity-scale-codec/std",
	"sp-core/std",
	"serde/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-runtime/std",
	"parity-util-mem",
	"sp-storage/std",
	"sc-client-api",
	"sc-chain-spec",
	"sc-executor",
	"sp-blockchain",
	### H224 features
	"fixed-hash/std",
	"impl-codec/std",
	### H224 `serde` feature
	"impl-serde/std",
]

### H224 features, cont'd
rand = ["fixed-hash/rand"]
json-schema = ["dep:schemars"]
fp-conversion = ["std"]
unstable = []
json = ["serde_json"]
