[package]
name = "griffin-pallas"
description = "no-std versions of six Pallas libraries"
version = "0.30.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas"
license = "Apache-2.0"
readme = "README.md"
authors = [
  "Santiago Carmuega <santiago@carmuega.me>",
]

[features]
default = ["json"]
unstable = []
json = ["serde", "serde_json"]

[dependencies]
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
minicbor = { version = "0.20", features = ["alloc", "half", "derive"] }
num-bigint = { version = "0.4.4", optional = true, default-features = false }
serde = { version = "1.0.143", default-features = false, optional = true, features = [
  "derive",
  "alloc",
] }
thiserror-no-std = "2.0.2"
cryptoxide = { version = "0.4.4" }
rand_core = "0.6"
base58 = "0.2.0"
bech32-no_std = { version = "0.7.3", default-features = false }
crc = "3.0.1"
core2 = { version = "0.4.0", default-features = false }
paste = "1.0.14"
itertools = { version="0.13.0", default-features = false, features = ["use_alloc"] }
hashbrown = "0.14"
serde_json = { version = "1.0.79", optional = true, default-features = false, features = [
    "alloc",
] }

[dev-dependencies]
proptest = "1.1.0"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
serde_test = "1.0.143"
