[package]
name = "griffin-wallet"
description = "Test wallet based on Tuxedo"
version = "0.2.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
griffin-core = { version = "0.2.0", path = "../griffin-core" }

clap = { features = ["derive"], workspace = true }
hex-literal = { workspace = true }
jsonrpsee = { features = ["http-client"], workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde_json = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

anyhow = "1.0.69"
colored = "3.0.0"
directories = "5.0.0"
env_logger = "0.11.0"
futures = "0.3"
hex.workspace = true
sled = "0.34.7"
tokio = "1.25.0"
sc-keystore.workspace = true
sp-keystore.workspace = true
