[package]
name = "pallas-crypto"
description = "Cryptographic primitives for Cardano"
version = "0.30.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-crypto"
license = "Apache-2.0"
readme = "README.md"
authors = ["Nicolas Di Prima <nicolas@primetype.co.uk>"]

[dependencies]
# PARA METER EN TUXEDO-CORE:
# hex = "0.4"
hex = { version="0.4.3", default-features = false }
cryptoxide = { version = "0.4.4" }
# thiserror = "1.0"
thiserror-no-std = "2.0.2"
rand_core = "0.6"
pallas-codec = { version = "=0.30.1", path = "../pallas-codec" }
# PARA METER EN TUXEDO-CORE:
# serde = "1.0.143"
serde = { version = "1.0.143", default-features = false }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8"
serde_test = "1.0.143"
