[package]
name = "pallas-primitives"
description = "Ledger primitives and cbor codec for the different Cardano eras"
version = "0.30.1"
edition = "2021"
repository = "https://github.com/txpipe/pallas"
homepage = "https://github.com/txpipe/pallas"
documentation = "https://docs.rs/pallas-byron"
license = "Apache-2.0"
readme = "README.md"
authors = [
    "Santiago Carmuega <santiago@carmuega.me>",
    "Lucas Rosa <x@rvcas.dev>",
]

[dependencies]
# PARA METER EN TUXEDO-CORE:
hex = { version = "0.4.3", default-features = false }
log = "0.4.14"
pallas-crypto = { version = "=0.30.1", path = "../pallas-crypto" }
pallas-codec = { version = "=0.30.1", path = "../pallas-codec" }
base58 = "0.2.0"
bech32 = "0.9.0"
# PARA METER EN TUXEDO-CORE:
serde = { version = "1.0.136", optional = true, features = [
    "derive",
], default-features = false }
serde_json = { version = "1.0.79", optional = true, default-features = false, features = [
    "alloc",
] }

[features]
json = ["serde", "serde_json"]
default = ["json"]
