[package]
name = "griffin-pallas-applying"
description = "Logic for validating and applying new blocks and txs to the chain state (no-std version)"
version = "0.30.1"
edition = "2021"
repository = "https://github.com/MaicoLeberle/pallas"
homepage = "https://github.com/MaicoLeberle/pallas"
license = "Apache-2.0"
readme = "README.md"
authors = ["Maico Leberle <maico.leberle@gmail.com>"]

[lib]
doctest = false

[dependencies]
pallas-addresses = { version = "=0.30.1", path = "../pallas-addresses", package = "griffin-pallas-addresses" }
pallas-codec = { version = "=0.30.1", path = "../pallas-codec", package = "griffin-pallas-codec" }
pallas-crypto = { version = "=0.30.1", path = "../pallas-crypto", package = "griffin-pallas-crypto" }
pallas-primitives = { version = "=0.30.1", path = "../pallas-primitives", package = "griffin-pallas-primitives" }
pallas-traverse = { version = "=0.30.1", path = "../pallas-traverse", package = "griffin-pallas-traverse" }
# rand = "0.8"
# hex = "0.4"
hex = { version="0.4.3", default-features = false }
# hashbrown = { version="0.14", default-features = false }
hashbrown = "0.14"

[dev-dependencies]
# hex = "0.4"
hex = { version="0.4.3", default-features = false }
